[package]
authors = ["Fabien Bellanger <valentil@gmail.com>"]
edition = "2018"
name = "test-rocket"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
rocket = {version = "0.5.0-rc.1", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
